@@ -435,17 +435,22 @@ begin
   tmpstr := getW10Release;
   if TryStrToInt(tmpstr, releaseint) then
   begin
+    Logdatei.log_prog('WinIsUefi releaseint: ' + IntToStr(releaseint), LLNotice);
     if releaseint < 2004 then
     begin
       try
         GetFirmwareEnvironmentVariableA('', '{00000000-0000-0000-0000-000000000000}', nil, 0);
         lastError := GetLastError;
         if (lastError = ERROR_INVALID_FUNCTION) then
+        begin
           //Writeln('Legacy BIOS')
+          Logdatei.log_prog('WinIsUefi detect by GetFirmwareEnvironmentVariable: Legacy BIOS', LLNotice);
           Result := False
+        end
         else
         begin
           //Writeln('UEFI Boot Mode');
+          Logdatei.log_prog('WinIsUefi detect by GetFirmwareEnvironmentVariable: UEFI Boot Mode', LLNotice);
           Result := True;
           Logdatei.log_prog('WinIsUefi last Error: ' + SysErrorMessage(
             lastError) + ' : ' + IntToStr(lastError), LLNotice);
@@ -459,7 +464,7 @@ begin
     begin
       { release >= 2004 : try to find it on the hard way }
       outlines := TXStringlist.Create;
-      RunCommandAndCaptureOut('cmd.exe /c bcdeditexe /enum', True,
+      RunCommandAndCaptureOut('cmd.exe /c bcdedit.exe /enum', True,
         outlines, outstr, SW_HIDE,exitcode);
       stringResult := '';
       i := 0;
@@ -470,6 +475,7 @@ begin
         else
           Inc(i);
       end;
+      Logdatei.log_prog('WinIsUefi detect by bcdedit: ' + stringResult, LLNotice);
       if AnsiContainsText(stringResult, '.efi') then
         Result := True;
     end;
