@@ -13,6 +13,8 @@ opsi-winst/opsi-script (4.12.4.0) experimental; urgency=low
     * Output catching, /showouput and getOutStreamFromSection support for WinBatch
   * ToDo: write opsi-script tests for these changes
   * compiled with lazarus 2.0.10
+  * fix for /showoutput at win64
+  * fix for runningonuefi if w10 release >= 2004
 
 -- j.werner <j.werner@uib.de> Thu, 30 Jul 2020 17:54
 
